--- a/pages/live_devo.html
+++ b/pages/live_devo.html
@@ -79,7 +79,7 @@
     <div id="breadCrumb" class="breadCrumb module">
       <ul>
         <li class="first"><a href="../index.htm">Home</a></li>
-        <li class="last">Pathway Support</li>
+        <li class="last">Watch Devotional</li>
       </ul>
     </div>
   </div>
@@ -90,84 +90,41 @@
 
 <div id="main-container" class="container">
   <div class="row row-offcanvas row-offcanvas-right">
-    <div class="col-xs-12 col-sm-8 main-content">
-    <button type="button" onclick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-            <img id="arrow-icon" src="../img/arrow.png" width="14" height="14" alt="arrow" class="inverse">
-
-</button>
-      <div class="hero pf-page-header"> <img style="width:52px; height:auto; margin-top:20px;" src="../img/advising/symbol_telephone.png" alt="supportLogo">
-        <h1 id="Standard" class="page-title">Pathway Support Center</h1>
-      </div>
-      <div class="pf-section">
-        <h2 class="s-heading">Contact</h2>
-        <p>Email: <a href="mailto:pathwaysupport@byui.edu">pathwaysupport@byui.edu</a> <br>
-          <br>
-          Phone: (208) 496-9898 or<br>
-          Toll-free at (855) 994-6721 <br>
-          <br>
-          Hours: Monday-Friday, 7 a.m.-7 p.m. (Mountain Standard Time)</p>
-        <h2 class="s-heading">About Us</h2>
-        <p>The  Pathway Support Center assists current students through their Pathway
-          experience. Our goal is to provide support, tools, and encouragement to
-          help students succeed in Pathway and beyond.</p>
-      </div>
-      <div>
-        <div class="pf-section"> <img class="img-responsive" src="../img/advising/advisingteam.png" alt="advisingTeam"> </div>
-        <div class="pf-section">
-          <h2 class="s-heading">Our Services</h2>
-          <h3 class="s-heading2">
-          APPLICATION AND REGISTRATION QUESTIONS
-          </h3>
-          <p style="font-style: italic;">If you have questions about the Pathway application or registration
-            processes, we have the answers.</p>
-          <h3 class="s-heading2">
-          EXPLORE ACADEMIC OPPORTUNITIES
-          </h3>
-          <p style="font-style: italic;">We help students explore the many different educational opportunities that
-            are available during and after Pathway.</p>
-          <h3 class="s-heading2">
-          WEBSITE NAVIGATION
-          </h3>
-          <p style="font-style: italic;">Can’t find what you’re looking for on the Pathway website? Contact
-            the  Pathway Support Center, and we’ll point you in the right direction.</p>
-          <h3 class="s-heading2">
-          PREPARE FOR MATRICULATION
-          </h3>
-          <p style="font-style: italic;">Whether you decide to continue your degree at BYU-Idaho or at a local
-            school, we are here to help you in the next step.</p>
-          <h3 class="s-heading2">
-          MOTIVATION / ENCOURAGEMENT
-          </h3>
-          <p style="font-style: italic;">Feeling overwhelmed? Pathway  Support Center representatives are only a call or
-            email away with words of advice, motivation, and encouragement.</p>
-          <h3 class="s-heading2">
-          ANSWERS TO ADDITIONAL QUESTIONS
-          </h3>
-          <p style="font-style: italic;">Contact us for any other questions you may have.</p>
-          <h2 class="s-heading2">After Pathway</h2>
-          <p>Your Pathway experience is only the first step of your academic journey.
-            We encourage you to continue your education and matriculate (start toward
-            your degree) at BYU-Idaho or any other institute of higher learning.</p>
-          <br>
-          <ul>
-            <li>Matriculation information for those in their second semester of <br>
-              Pathway: <a href="../pdfs/advising_and_support/Advise_Matriculation_Template_Update_Semester2.pdf" style="color:#dc4831;" target="_blank">2nd Semester Matriculation PDF</a></li>
-            <li>Matriculation information for those in their final semester of<br>
-              Pathway: <a href="../pdfs/advising_and_support/Advise_Matriculation_Template_Update_Semester3.pdf" style="color:#dc4831;" target="_blank">3rd Semester Matriculation PDF</a></li>
-            <li>Find Out More: <a href="pathway-faq.html#after-section" style="color:#dc4831;">Matriculation FAQs</a></li>
-          </ul>
-          <br>
+    <div class="col-xs-12 main-content">
+      <div class="hero pf-page-header"> <img style="width:52px; height:auto; margin-top:20px;" src="../img/media/videos-icon.png" alt="supportLogo">
+        <h1 id="Standard" class="page-title">Watch Devotional Live</h1>
+        <p class="page-summary">Beginning at 2:10 p.m. Mountain Time on Tuesdays during each semester</p>
+        <div class="responsive-video-container">
+          <!-- Start of Brightcove Player -->
+          <!--
+          By use of this code snippet, I agree to the Brightcove Publisher T and C found at https://accounts.brightcove.com/en/terms-and-conditions/. 
+          -->
+          <script language="JavaScript" type="text/javascript" src="http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
+          <object id="myExperience1875741838001" class="BrightcoveExperience">
+            <param name="bgcolor" value="#FFFFFF" />
+            <param name="width" value="90%" />
+            <param name="height" value="85%" />
+            <param name="playerID" value="1422553009001" />
+            <param name="playerKey" value="AQ~~,AAABCveqfDE~,4WT0xjonGph2DAPpekGOWrqZDInIzANJ" />
+            <param name="isVid" value="true" />
+            <param name="isUI" value="true" />
+            <param name="dynamicStreaming" value="true" />
+            <param name="@videoPlayer" value="1875741838001" />
+          </object>
+          <!-- 
+          This script tag will cause the Brightcove Players defined above it to be created as soon
+          as the line is read by the browser. If you wish to have the player instantiated only after
+          the rest of the HTML is processed and the page load is complete, remove the line.
+          -->
+          <script type="text/javascript">brightcove.createExperiences();</script>
+          <!-- End of Brightcove Player -->
         </div>
+        <p>Listen to devotional live via <a href="http://www.byuidahoradio.org/">BYU-Idaho Radio</a> or view past messages in the <a href="https://web.byui.edu/devotionalsandspeeches/#/">devotional archive</a>.</p>
+        <p style="font-style:italic">*Rebroadcasts of BYU-Idaho devotionals air Sundays at 2:00 p.m. Mountain Time on BYU&nbsp;Television. An online program guide for BYUTV is available <a href="http://www.byutv.org/schedule/?v=grid">here</a>.</p>
+        <br>
       </div>
     </div>
-<!-- Sidebar Start -->
-<div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
-  <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
-   <a class="live_chat_icon" target="_blank" href="https://server.iad.liveperson.net/hc/1132447/?cmd=file&file=visitorWantsToChat&site=1132447&byhref=1&SESSIONVAR!skill=Pathway"> <img src="../img/live_chat_icon.png"></a>
   </div>
-</div>
-  </div>
-<!-- End Sidebar -->
 </div>
 <footer>
   <div class="container">
