--- a/pages/advising-and-support.html
+++ b/pages/advising-and-support.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -92,7 +93,7 @@
   <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-8 main-content">
     <button type="button" onclick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-            <img id="arrow-icon" src="../img/arrow.png" width="14" height="14" alt="arrow" class="inverse">
+            <img id="arrow-icon" src="../img/arrow.png" width="14" height="14" alt="arrow">
 
 </button>
       <div class="hero pf-page-header"> <img style="width:52px; height:auto; margin-top:20px;" src="../img/advising/symbol_telephone.png" alt="supportLogo">
@@ -166,8 +167,8 @@
    <a class="live_chat_icon" target="_blank" href="https://server.iad.liveperson.net/hc/1132447/?cmd=file&file=visitorWantsToChat&site=1132447&byhref=1&SESSIONVAR!skill=Pathway"> <img src="../img/live_chat_icon.png"></a>
   </div>
 </div>
-  </div>
 <!-- End Sidebar -->
+</div>
 </div>
 <footer>
   <div class="container">
