--- a/pages/live_devo.html
+++ b/pages/live_devo.html
@@ -99,7 +99,7 @@
           <!--
           By use of this code snippet, I agree to the Brightcove Publisher T and C found at https://accounts.brightcove.com/en/terms-and-conditions/. 
           -->
-          <script language="JavaScript" type="text/javascript" src="http://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
+          <script language="JavaScript" type="text/javascript" src="https://admin.brightcove.com/js/BrightcoveExperiences.js"></script>
           <object id="myExperience1875741838001" class="BrightcoveExperience">
             <param name="bgcolor" value="#FFFFFF" />
             <param name="width" value="90%" />
@@ -109,6 +109,7 @@
             <param name="isVid" value="true" />
             <param name="isUI" value="true" />
             <param name="dynamicStreaming" value="true" />
+            <param name="secureConnections" value="true" />
             <param name="@videoPlayer" value="1875741838001" />
           </object>
           <!-- 
