--- a/pages/what_is_pathway/l_version/admission.html
+++ b/pages/what_is_pathway/l_version/admission.html
@@ -120,60 +120,63 @@ position: relative;" src="../../../img/EnglishTestButton.png"></a> </p></div>
 		<h2 id="AdmissionRequirements" class="subheading">Admission Requirements</h2>
 	</div>
 	<div class="main-content">
+	<h3 class="p-heading turquoise">Simple Admission Process</h3>
+				<ul>
+					<li>
+						<strong><em>NO</em></strong> application fee
+					</li>
+					<li>
+						<strong><em>NO</em></strong> standardized scores (ACT/SAT)
+					</li>
+					<li>
+						<strong><em>NO</em></strong> ecclesiastical endorsement<sup>+</sup>
+					</li>
+				</ul>
+				<br>
 		<p>To be eligible to participate in Pathway, applicants must:</p>
-		<ul>
-			<li>
-				Be a member of The Church of Jesus Christ of Latter-day Saints
-			</li>
-			<li>
-				Attend the weekly gathering during Pathway (one full year)
-			</li>
-			<li>
-				Strive to live by the <a style="color:#dc4831; text-decoration:underline;" href="http://www.byui.edu/student-honor-office/ces-honor-code" target="_blank">BYU-Idaho Honor Code</a>
-			</li>
-			<li>
-				Be proficient in listening to, speaking, reading, and writing English (proficiency assessment may be required)
-			</li>
-			<li>
-				Be capable of entry-level college academic work with post-secondary disability accommodations, if qualified and required
-			</li>
-			<li>
-				Be able to access a computer with high-speed Internet on a daily basis
-			</li>
-			<li>
-				Live within a reasonable commuting distance of a <a href="#joinpathway">Pathway site.</a> 
-			</li>
-		</ul>
+				<ul>
+					<li>
+						Be a member of The Church of Jesus Christ of Latter-day Saints
+					</li>
+					<li>
+						Attend the weekly gathering during Pathway (one full year)
+					</li>
+					<li>
+						Strive to live by the <a href="http://www.byui.edu/student-honor-office/ces-honor-code" target="_blank">BYU-Idaho Honor Code</a>
+					</li>
+					<li>
+						Be proficient in listening to, speaking, reading, and writing English (proficiency assessment may be required)
+					</li>
+					<li>
+						Be capable of entry-level college academic work with post-secondary disability accommodations, if qualified and required
+					</li>
+					<li>
+						Be able to access a computer with high-speed Internet and webcam/video chat capabilities on a daily basis
+					</li>
+					<li>
+						Live within a reasonable commuting distance of a Pathway site
+					</li>
+				</ul>
 	</div>
-
+				<br>
+<!-- Start Deadline Widget -->
+	<link rel="stylesheet" type="text/css" href="https://byuipathway.github.io/deadlines-widget/css/main.css">
+	<div id="deadline_widget">
+	Loading JSON...
+	</div>
+	
+	<!-- End Widget -->
+<br><br>
 	<a href=""><img id="location-icon" src="../../../img/admission/location_blue.png" alt="location"></a>
 
-	<div class="click-here turquoise"><a href="#joinpathway">Click here to search for a Pathway site near you.</a></div>
+	<div class="click-here turquoise"><a href="#joinpathway">Click here to search for a Pathway location/site near you and apply.</a></div>
 
 	<img class="img-space" id="adm-img" src="../../../img/admission/worldmap.png" alt="location map" width="100%"></a>
 
 	<div class="main-content">
-		<h3 class="p-heading turquoise">Simple Admission Process</h3>
-	
-		<ul>
-			<li>
-				NO application fee
-			</li>
-			<li>
-				NO high school diploma or GED (U.S. & Canada Only)<sup>*</sup>
-			</li>
-			<li>
-				NO standardized scores (ACT/SAT)
-			</li>
-			<li>
-				NO ecclesiastical endorsement<sup>+</sup>
-			</li>
-		</ul>
-		<hr>
 
-		<div id="footnote">
-			<!-- <p id="footnote"> --><strong>*</strong>&nbsp;High school completion is required for international students and for U.S. students who desire to apply for federal financial aid at the completion of Pathway.</p>
-			<!-- <p id="footnote"> --><strong>+</strong>&nbsp;An ecclesiastical endorsement is required at the end of Pathway for those students who choose to continue to the BYU-Idaho Online Degree Program.</p>
+		<div id="footnote"> 
+			<strong>+</strong>&nbsp;An ecclesiastical endorsement is required at the end of Pathway for those students who choose to continue to the BYU-Idaho Online Degree Program.
 		</div>
 
 	</div>
@@ -294,5 +297,6 @@ position: relative;" src="../../../img/EnglishTestButton.png"></a> </p></div>
 	<script src="../../../dist/js/bootstrap.min.js"></script> 
 	<script src="../../../js/jquery.easing.1.3.js" type="text/javascript" ></script>
 	<script src="../../../js/drawer.js" type="text/javascript"></script>
+	<script type="text/javascript" src="https://byuipathway.github.io/deadlines-widget/deadlines-accordion.js"></script>
 </body>
 </html>
