--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -219,6 +219,8 @@ position: relative;" src="../../../img/EnglishTestButton.png"></a> </p></div>
 					</li>
 				</ul>
                 <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+                <br>
+                <a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="../../../img/admission/ApplyButton_Lversion.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="../../../img/admission/ApplyButton_Lversion.png"></a>
 			</div>
 		</div>
 <!-- End Sidebar -->
