--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -183,6 +183,8 @@
         </ul>
         <h3><a href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
         <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+        <br>
+                <a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="../../../img/admission/ApplyButton_Standard.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="../../../img/admission/ApplyButton_Standard.png"></a>
       </div>
     </div>
     <!-- End Sidebar --> 
