--- a/index.htm
+++ b/index.htm
@@ -121,13 +121,13 @@
       <li data-target="#myCarousel" data-slide-to="3"> </li>
       <li data-target="#myCarousel" data-slide-to="4"> </li>
       <li data-target="#myCarousel" data-slide-to="5"> </li>
+      <li data-target="#myCarousel" data-slide-to="6"> </li>
     </ol>
     <div class="carousel-inner">
     <div class="item active">
-       <a href="https://pathway.lds.org/Finder/World">
-         <img class="visible-md visible-lg" src="img/homepage/ApplyNowBanner.png" alt="Apply Now">
-         <img class="visible-sm" src="img/homepage/ApplyNowBanner_tablet.png" alt="Apply Now">
-         <img class="visible-xs mobile-grapic-overide" src="img/homepage/ApplyNowBanner_mobile.png" alt="Apply Now">
+       <a class="full-width-banner teal" href="http://www.byui.edu/pathway/speaking-partner-promo">
+         <img class="visible-md visible-lg" src="img/homepage/MCspeakingPartners_2014_banner_pathway.lds.org.png" alt="Apply Now">
+         <img class="visible-sm visible-xs" src="img/homepage/MCspeakingPartners_2014_tablet_banner_pathway.lds.org.png" alt="Apply Now">
        </a>
     </div>
      <div class="item">  <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/whatispathway.jpg" alt="What is Pathway"></a>
@@ -197,9 +197,10 @@
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li> <a href="pages/about-us.html">About Us</a> </li>
         <li> <a href="pages/pathway-faq.html">FAQ</a> </li>
-        <li> <a href="pages/media/media.html">Media</a> </li>
-      </ul>
-      <a href="http://www.byui.edu" class="byui-box-logo"></a> </div>
+        <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
+        <li> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
+        <li> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
+      </ul></div>
   </div>
 </div>
 </div>
@@ -207,11 +208,19 @@
   <div class="container">
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
-        <li class="social-container"> <a class="social-icon" href="https://www.facebook.com/BYUIdahoOnline"><img src="img/social-icons/facebook.png" width="27" height="27"></a> <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="img/social-icons/pinterest.png" width="27" height="27"></a> <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="img/social-icons/twitter.png" width="27" height="27"></a> <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="img/social-icons/youtube.png" width="27" height="27"></a> </li>
-        <li class="hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="hidden-xs"> <a href="pages/about-us.html">About Us</a> </li>
-        <li class="hidden-xs"> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li class="hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
+        <li class="social-container"> 
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="img/social-icons/pinterest.png" width="27" height="27"></a>
+          <br class="hidden-xs"> 
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="img/social-icons/instagram.png" width="27" height="27"></a>
+        </li>
+        <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
+        <li class="footer-link hidden-xs"> <a href="pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="pages/pathway-faq.html"><img class="faq-bubble" src="img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
+        <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
+        <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
       </ul>
       <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
   </div>
