--- a/pages/what_is_pathway/s_version/cost.html
+++ b/pages/what_is_pathway/s_version/cost.html
@@ -231,17 +231,21 @@
   <div class="container">
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
-        <li> 
-        <a class="social-icon" href="https://www.facebook.com/BYUIdahoOnline"><img src="../../../img/social-icons/facebook.png" width="27" height="27"></a>
-        <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="../../../img/social-icons/pinterest.png" width="27" height="27"></a>
-        <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="../../../img/social-icons/twitter.png" width="27" height="27"></a>
-        <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
-        <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li> <a href="../../about-us.html">About Us</a> </li>
-        <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
-        <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
+        <li class="social-container"> 
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="../../../img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="../../../img/social-icons/pinterest.png" width="27" height="27"></a>
+          <br class="hidden-xs"> 
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="../../../img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="../../../img/social-icons/instagram.png" width="27" height="27"></a>
+        </li>
+        <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
+        <li class="footer-link hidden-xs"> <a href="../../about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
+        <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
+        <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
       </ul>
-      <a href="http://www.byui.edu" class="byui-logo"></a> </div>
+      <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
   </div>
 </footer>
 
