--- a/pages/speaking_partners/contact-us.html
+++ b/pages/speaking_partners/contact-us.html
@@ -128,15 +128,15 @@
    				</div>
    			
 
-           <!-- Sidebar Start -->
+<!-- Sidebar Start -->
         <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
       <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
-        <ul class="nav green pf-sidenav">
-          <li> <a href="what-is-speaking-partners.html"> <span class="caret"></span> What is the Speaking Partner Program?</a> </li>
-          <li> <a href="https://web.byui.edu/SpeakingPartners/Volunteer/"> <span class="caret"></span> Sign Up / Find A Partner</a> </li>
+        <ul class="nav darkgreen pf-sidenav">
+          <li> <a href="what-is-speaking-partners.html"> <span class="caret"></span> Speaking Partners</a> </li>
+          <li> <a href="signup.html"> <span class="caret"></span> Sign Up / Find&nbsp;A&nbsp;Partner</a> </li>
           <li> <a href="discussion-materials.html"> <span class="caret"></span> Discussion Materials</a>
           </li>
-          <li> <a href="guidelines.html"> <span class="caret"></span> Speaking Partner Guidelines</a>
+          <li> <a href="guidelines.html"> <span class="caret"></span> Guidelines for Mentors</a>
           </li>
           <li class="active"> <a href="contact-us.html"> <span class="caret"></span> Contact Us</a>
           </li>
