--- a/pages/speaking_partners/signup.html
+++ b/pages/speaking_partners/signup.html
@@ -111,29 +111,58 @@
             <img id="arrow-icon" src="../../img/arrow.png" width="14" height="14" alt="arrow">
 
 </button>
-      <br>
+<br>
       <div class="hero pf-page-header">
         <img src="../../img/Speaking-Partners-Main/website_speakingpartners_image5.png" />
-        <h2 class="heading green">Speaking Partners</h2>
+        <h2 class="subheading green">Speaking Partners</h2>
+        <h1 id="Standard" class="green page-title">Sign Up / Find&nbsp;a&nbsp;Partner</h1>
       </div>
       <br>
       <div class="pf-section">
 
-        <p>We’ve all heard that English is the “universal language.” But do you know why? Perhaps it’s because those who know English typically make more money than those who don’t. Or maybe it’s because 1/4 of the world’s population speak the language at a useful level. <br><br>But no matter the reason, one thing is certain &mdash; learning English sets people up for better opportunities educationally, socially, economically, and more. </p>
-        <div class="img-responsive"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image1.png"></div>
-      </div>  
-      <h3 class="inset">That's where Speaking Partners comes in.</h3>
+        <p>Ready to improve the life of a Pathway student by volunteering for just 30 minutes each week as a speaking&nbsp;partner mentor? </p>
+      </div>
 
-      <div class="pf-section">For non-native English-speaking Pathway students, improving English skills is a primary purpose of the Pathway experience. So, in addition to English learning activities built-in to Pathway’s academic courses, students also enhance their English speaking and listening abilities through the Speaking Partner Program.</div>
+      <div class="responsive-video-container">
+        <iframe frameborder="0" id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_g8u6bnfp&amp;wid=0_48eym4ss&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;"></iframe>
+      </div>
 
-      <h2 class="subsection"><a id="works"></a>How Speaking Partners Works</h2>
+      <div class="pf-section">
+      	<h3>Here's How to Get Started:</h3>
 
-      <div class="img-responsive"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image2.png"></div>
-      <div class="image-caption-1">Students enrolled in Pathway’s L version (for non-native English speakers) practice and improve their English abilities through conversations with fluent English speakers. </div>
-      <div class="img-responsive"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image3.png"></div>
-      <div class="image-caption-2">Each discussion lasts 30 minutes and occurs once a week for 12 consecutive&nbsp;weeks.</div>
-		<br>
-        <div id="video-info-block">
+      	<div class="block-1">
+      	<h4>Requirements</h4>
+      	<ul>
+      		<li>Speak English fluently</li>
+      		<li>Be a member of The Church of Jesus Christ of Latter-day Saints, a BYU-Idaho student, or a Pathway student</li>
+      		<li>Be 18 years of age or older</li>
+      		<li>Participate in a 30-minute appointment once a week for 12 consecutive weeks.</li>
+      	</ul>
+      	</div>
+
+      	<div class="block-2">
+      	<h4>Sign Up as a Volunteer</h4>
+      	<p>Signing up is simple!</p>
+      	<h5>Follow These Quick Steps:</h5>
+      	<ol>
+      		<li><strong>Complete Registration Form:</strong><br>Click here to complete a volunteer registration form.</li>
+      		<li><strong>Select Availability:</strong><br>Click here to select the days/times you are available to volunteer.</li>
+      	</ol>
+      	</div>
+
+      	<div class="block-3">
+      	<h4>Getting Started</h4>
+      	Speaking partner meetings begin the second week of every semester and last through the last week of the semester:
+
+      	<div class="semester"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image9.png" /><span class="season">Fall</span> mid September-late December</div>
+      	<div class="semester"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image10.png" /><span class="season">Winter</span> mid January-mid April</div>
+      	<div class="semester"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image11.png" /><span class="season">Spring</span> late April-late July</div>
+
+      	At the beginning of each new semester, students enrolled in Pathway’s L version courses will select a speaking partner mentor that matches their availability. Mentors will receive an email asking them to accept the request. Once the mentor confirms, contact information is released to both parties, and the speaking partner learners and mentors can begin meeting each week.
+      	</div>
+      </div>
+
+  <div id="video-info-block">
         <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
         <p class="note green">Watch the video below to learn more about the Speaking Partner Program.</p>
         </div>
@@ -142,40 +171,18 @@
         <iframe frameborder="0" id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_g8u6bnfp&amp;wid=0_48eym4ss&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;"></iframe>
       </div>
 
-      <h2 class="subsection"><a id="become"></a>Become a Speaking Partner Mentor</h2>
-      <div class="pf-section">Be the person that can improve the life of a Pathway student. Enjoy cultural exchange, the joy of service, and learn something new about the world!</div>
-
-      <br>
-      <div class="to-serve-box">
-        <h3>To serve, all you need to do is:</h3>
-        <ul>
-          <li>Speak English fluently</li>
-          <li>Be a member of The Church of Jesus Christ of Latter-day Saints, a BYU-Idaho student, or a Pathway student</li>
-          <li>Be 18 years of age or older</li>
-          <li>Participate in a 30-minute appointment once a week for 12 consecutive weeks.</li>
-        </ul>
-      </div>
-
-        <a href="https://web.byui.edu/SpeakingPartners/Volunteer/" target="_blank"><img class="img-responsive img-space" src="../../img/speaking-partners-main/speakingpartner_signup.png" alt="Click here to sign up as a speaking partner" /></a>
-
-<div id="video-info-block">
-        <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
-        <p class="note green">To watch more videos or learn more about Pathway, visit our <a href="#">Media Page</a>, or click on one of the social media links at the bottom of the page</p>
-        </div>
+      <div class="inline-header green">Questions? <a class="green" href="#">Contact Us</a></div>
     </div>
     
-    <!-- Sidebar Start -->
+<!-- Sidebar Start -->
         <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
       <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
         <ul class="nav darkgreen pf-sidenav">
-          <li class="active"> <a href="what-is-speaking-partners.html"> <span class="caret"></span> Speaking Partners</a> <ul class="nav drop-down">
-              <li> <a href="#works">How Speaking Partners Works</a> </li>
-              <li> <a href="#become">Become a Speaking Partner Mentor</a> </li>
-            </ul></li>
-          <li> <a href="signup.html"> <span class="caret"></span> Sign Up / Find&nbsp;A&nbsp;Partner</a> </li>
+          <li> <a href="what-is-speaking-partners.html"> <span class="caret"></span> Speaking Partners</a> </li>
+          <li class="active"> <a href="signup.html"> <span class="caret"></span> Sign Up / Find&nbsp;A&nbsp;Partner</a> </li>
           <li> <a href="discussion-materials.html"> <span class="caret"></span> Discussion Materials</a>
           </li>
-          <li> <a href="guidelines.html"> <span class="caret"></span> Guidelines For Mentors</a>
+          <li> <a href="guidelines.html"> <span class="caret"></span> Guidelines for Mentors</a>
           </li>
           <li> <a href="contact-us.html"> <span class="caret"></span> Contact Us</a>
           </li>
@@ -184,7 +191,7 @@
         </ul>
       </div>
     </div>
-    <!-- End Sidebar -->
+        <!-- End Sidebar -->
   </div>
 </div>
 <footer>
