--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -113,14 +113,14 @@
 </button>
       <br>
       <div class="hero pf-page-header">
-        <img src="../../img/Speaking-Partners-Main/website_speakingpartners_image5.png" />
+        <img src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
         <h2 class="heading green">Speaking Partners</h2>
       </div>
       <br>
       <div class="pf-section">
 
         <p>We’ve all heard that English is the “universal language.” But do you know why? Perhaps it’s because those who know English typically make more money than those who don’t. Or maybe it’s because 1/4 of the world’s population speak the language at a useful level. <br><br>But no matter the reason, one thing is certain &mdash; learning English sets people up for better opportunities educationally, socially, economically, and more. </p>
-        <div class="img-responsive"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image1.png"></div>
+        <div class="img-responsive"><img src="../../img/speaking-partners-main/website_speakingpartners_image1.png"></div>
       </div>  
       <h3 class="inset">That's where Speaking Partners comes in.</h3>
 
@@ -128,9 +128,9 @@
 
       <h2 class="subsection"><a id="works"></a>How Speaking Partners Works</h2>
 
-      <div class="img-responsive"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image2.png"></div>
+      <div class="img-responsive"><img src="../../img/speaking-partners-main/website_speakingpartners_image2.png"></div>
       <div class="image-caption-1">Students enrolled in Pathway’s L version (for non-native English speakers) practice and improve their English abilities through conversations with fluent English speakers. </div>
-      <div class="img-responsive"><img src="../../img/Speaking-Partners-Main/website_speakingpartners_image3.png"></div>
+      <div class="img-responsive"><img src="../../img/speaking-partners-main/website_speakingpartners_image3.png"></div>
       <div class="image-caption-2">Each discussion lasts 30 minutes and occurs once a week for 12 consecutive&nbsp;weeks.</div>
 		<br>
         <div id="video-info-block">
@@ -146,7 +146,7 @@
       <div class="pf-section">Be the person that can improve the life of a Pathway student. Enjoy cultural exchange, the joy of service, and learn something new about the world!</div>
 
       <br>
-      <div class="to-serve-box">
+      <div class="bullet-box">
         <h3>To serve, all you need to do is:</h3>
         <ul>
           <li>Speak English fluently</li>
