--- a/pages/speaking_partners/contact-us.html
+++ b/pages/speaking_partners/contact-us.html
@@ -113,7 +113,7 @@
 </button>
    				<br>
         <div class="hero pf-page-header">
-        <img src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
+        <img alt="speaking partners icon" src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
         <h2 class="subheading green">Speaking Partners</h2>
         <h1 id="Standard" class="green page-title">Discussion Materials</h1>
         </div>
