--- a/pages/speaking_partners/guidelines.html
+++ b/pages/speaking_partners/guidelines.html
@@ -113,7 +113,7 @@
 </button>
    				<br>
       <div class="hero pf-page-header">
-        <img src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
+        <img alt="speaking partners icon" src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
         <h2 class="subheading green">Speaking Partners</h2>
         <h1 id="Standard" class="green page-title">Guidelines for Mentors</h1>
       </div>
@@ -286,7 +286,7 @@
               <h6>Confrontation/Politeness</h6>
               <p>Some cultures will do anything to avoid confrontation, disagreement, or to say "no" to even a suggested appointment time. Some students might seem to drop off the radar because offense was taken where none was meant; therefore, be very sensitive and try to read the confidence and feelings of your partner.</p>
               <h6>Technological Capacity</h6>
-              <p>Although Pathway students should have access to hardware that can deal with live video calls, sometimes network connections are slow, cut out, and in occasional cases, power might be down in their region. (While this may occur, it should not be a weekly excuse for missed meetings). Again, try to be patient as you work through such, and keep in touch with the <a href=""><em>Pathway Support Center</em></a> to report any issues.</p>
+              <p>Although Pathway students should have access to hardware that can deal with live video calls, sometimes network connections are slow, cut out, and in occasional cases, power might be down in their region. (While this may occur, it should not be a weekly excuse for missed meetings). Again, try to be patient as you work through such, and keep in touch with the <a href="https://pathway.lds.org/Main/AdvisingAndSupport"><em>Pathway Support Center</em></a> to report any issues.</p>
               </div>
             </div>
           <br>
