--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -95,7 +95,7 @@
           <ul>
             <li class="first"><a href="../../index.htm">Home</a></li>
             <li><a href="what-is-speaking-partners.html">Speaking Partners</a></li>
-            <li class="last">What is the Speaking Partner Program</li>
+            <li class="last">Speaking Partners</li>
           </ul>
         </div>
       </div>
@@ -108,12 +108,10 @@
   <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-8 main-content">
     <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-            <img id="arrow-icon" src="../../img/arrow.png" width="14" height="14" alt="arrow">
-
-</button>
+            <img id="arrow-icon" src="../../img/arrow.png" width="14" height="14" alt="arrow"></button>
       <br>
       <div class="hero pf-page-header">
-        <img src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
+        <img alt="speaking partners icon" src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
         <h2 class="heading green">Speaking Partners</h2>
       </div>
       <br>
@@ -160,7 +158,7 @@
 
 <div id="video-info-block">
         <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
-        <p class="note green">To watch more videos or learn more about Pathway, visit our <a href="#">Media Page</a>, or click on one of the social media links at the bottom of the page</p>
+        <p class="note green">To watch more videos or learn more about Pathway, visit our <a target="_blank" href="http://www.byui.edu/pathway/videos">Media Page</a>, or click on one of the social media links at the bottom of the page</p>
         </div>
     </div>
     
