--- a/pages/speaking_partners/signup.html
+++ b/pages/speaking_partners/signup.html
@@ -95,7 +95,7 @@
           <ul>
             <li class="first"><a href="../../index.htm">Home</a></li>
             <li><a href="what-is-speaking-partners.html">Speaking Partners</a></li>
-            <li class="last">What is the Speaking Partner Program</li>
+            <li class="last">Sign Up / Find a Partner</li>
           </ul>
         </div>
       </div>
@@ -109,11 +109,10 @@
     <div class="col-xs-12 col-sm-8 main-content">
     <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
             <img id="arrow-icon" src="../../img/arrow.png" width="14" height="14" alt="arrow">
-
 </button>
 <br>
       <div class="hero pf-page-header">
-        <img src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
+        <img alt="speaking partners icon" alt="speaking partners icon" src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
         <h2 class="subheading green">Speaking Partners</h2>
         <h1 id="Standard" class="green page-title">Sign Up / Find&nbsp;a&nbsp;Partner</h1>
       </div>
@@ -141,8 +140,8 @@
       	<p>Signing up is simple!</p>
       	<h5>Follow These Quick Steps:</h5>
       	<ol>
-      		<li><strong>Complete Registration Form:</strong><br>Click here to complete a volunteer registration form.</li>
-      		<li><strong>Select Availability:</strong><br>Click here to select the days/times you are available to volunteer.</li>
+      		<li><strong>Complete Registration Form:</strong><br><a href="https://web.byui.edu/SpeakingPartners/Volunteer/"><em>Click here</em></a> to complete a volunteer registration form.</li>
+      		<li><strong>Select Availability:</strong><br><a href="https://web.byui.edu/SpeakingPartners/Volunteer/"><em>Click here</em></a> to select the days/times you are available to volunteer.</li>
       	</ol>
       	</div>
 
@@ -150,9 +149,9 @@
       	<h4>Getting Started</h4>
       	Speaking partner meetings begin the second week of every semester and last through the last week of the semester:
 
-      	<div class="semester"><img src="../../img/speaking-partners-main/website_speakingpartners_image9.png" /><span class="season">Fall</span> mid September-late December</div>
-      	<div class="semester"><img src="../../img/speaking-partners-main/website_speakingpartners_image10.png" /><span class="season">Winter</span> mid January-mid April</div>
-      	<div class="semester"><img src="../../img/speaking-partners-main/website_speakingpartners_image11.png" /><span class="season">Spring</span> late April-late July</div>
+      	<div class="semester"><img alt="fall icon" src="../../img/speaking-partners-main/website_speakingpartners_image9.png" /><span class="season">Fall</span> mid September-late December</div>
+      	<div class="semester"><img alt="winter icon" src="../../img/speaking-partners-main/website_speakingpartners_image10.png" /><span class="season">Winter</span> mid January-mid April</div>
+      	<div class="semester"><img alt="spring icon" src="../../img/speaking-partners-main/website_speakingpartners_image11.png" /><span class="season">Spring</span> late April-late July</div>
 
       	At the beginning of each new semester, students enrolled in Pathway’s L version courses will select a speaking partner mentor that matches their availability. Mentors will receive an email asking them to accept the request. Once the mentor confirms, contact information is released to both parties, and the speaking partner learners and mentors can begin meeting each week.
       	</div>
@@ -167,7 +166,7 @@
         <iframe frameborder="0" id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_g8u6bnfp&amp;wid=0_48eym4ss&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;"></iframe>
       </div>
 
-      <div class="inline-header green">Questions? <a class="green" href="#">Contact Us</a></div>
+      <div class="inline-header green">Questions? <a class="green" href="https://pathway.lds.org/Main/AdvisingAndSupport">Contact Us</a></div>
     </div>
     
 <!-- Sidebar Start -->
