--- a/pages/speaking_partners/signup.html
+++ b/pages/speaking_partners/signup.html
@@ -163,7 +163,7 @@
         </div>
 
         <div class="responsive-video-container">
-        <iframe frameborder="0" id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_g8u6bnfp&amp;wid=0_48eym4ss&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;"></iframe>
+        <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16585652/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_jzodqy31&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;&amp;wid=0_ioxegakf" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0"></iframe>
       </div>
 
       <div class="inline-header green">Questions? <a class="green" href="https://pathway.lds.org/Main/AdvisingAndSupport">Contact Us</a></div>
