--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -137,7 +137,7 @@
         </div>
 
         <div class="responsive-video-container">
-        <iframe frameborder="0" id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_g8u6bnfp&amp;wid=0_48eym4ss&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;"></iframe>
+        <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16585652/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_1neab2a9&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;&amp;wid=0_dxmedij9" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0"></iframe>
       </div>
 
       <h2 class="subsection"><a id="become"></a>Become a Speaking Partner Mentor</h2>
