--- a/pages/speaking_partners/contact-us.html
+++ b/pages/speaking_partners/contact-us.html
@@ -115,14 +115,11 @@
         <div class="hero pf-page-header">
         <img alt="speaking partners icon" src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
         <h2 class="subheading green">Speaking Partners</h2>
-        <h1 id="Standard" class="green page-title">Discussion Materials</h1>
+        <h1 id="Standard" class="green page-title">Contact Us</h1>
         </div>
         <br>
    			<div class="pf-section">
-   				<p>If you have questions or concerns about your involvement with the Speaking Partner Program, please feel free to contact us. We also invite any Pathway missionaries and students participating in the Speaking Partner Program to contact us at the email address or phone number listed below.</p>
-
-          <p class="note green">speakingpartners@byui.edu</p>
-          <p>+1-208-496-1835 </p>
+   				<p>If you have questions or concerns about your involvement with the Speaking Partner Program, please feel free to <a href="https://pathway.lds.org/Main/AdvisingAndSupport">contact us</a>. We also invite Pathway missionaries and students participating in the Speaking Partner Program to contact the <a href="https://pathway.lds.org/Main/AdvisingAndSupport">Pathway Support Center</a>.</p>
    			</div>
    			</div>
 
