--- a/pages/speaking_partners/signup.html
+++ b/pages/speaking_partners/signup.html
@@ -159,7 +159,7 @@
 
   <div id="video-info-block">
         <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
-        <p class="note green">Watch the video below to learn more about the Speaking Partner Program.</p>
+        <p class="note green">Watch the video below to learn more about the speaking partner matching&nbsp;process.</p>
         </div>
 
         <div class="responsive-video-container">
