--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -122,7 +122,7 @@
       </div>  
       <h3 class="inset">That's where Speaking Partners comes in.</h3>
 
-      <div class="pf-section">For non-native English-speaking Pathway students, improving English skills is a primary purpose of the Pathway experience. So, in addition to English learning activities built-in to Pathway’s academic courses, students also enhance their English speaking and listening abilities through the Speaking Partner Program.</div>
+      <div class="pf-section">For non-native English-speaking Pathway students, improving English skills is a primary purpose of the Pathway experience. So, in addition to English-learning activities built in to Pathway’s academic courses, students also enhance their English speaking and listening abilities through the Speaking Partner Program.</div>
 
       <h2 class="subsection"><a id="works"></a>How Speaking Partners Works</h2>
 
@@ -141,7 +141,7 @@
       </div>
 
       <h2 class="subsection"><a id="become"></a>Become a Speaking Partner Mentor</h2>
-      <div class="pf-section">Be the person that can improve the life of a Pathway student. Enjoy cultural exchange, the joy of service, and learn something new about the world!</div>
+      <div class="pf-section">Be the person who can improve the life of a Pathway student. Enjoy cultural exchange, the joy of service, and learn something new about the world!</div>
 
       <br>
       <div class="bullet-box">
@@ -150,7 +150,7 @@
           <li>Speak English fluently</li>
           <li>Be a member of The Church of Jesus Christ of Latter-day Saints, a BYU-Idaho student, or a Pathway student</li>
           <li>Be 18 years of age or older</li>
-          <li>Participate in a 30-minute appointment once a week for 12 consecutive weeks.</li>
+          <li>Participate in a 30-minute appointment once a week for 12 consecutive weeks</li>
         </ul>
       </div>
 
