--- a/pages/speaking_partners/contact-us.html
+++ b/pages/speaking_partners/contact-us.html
@@ -119,7 +119,7 @@
         </div>
         <br>
    			<div class="pf-section">
-   				<p>If you have questions or concerns about your involvement with the Speaking Partner Program, please feel free to <a href="https://pathway.lds.org/Main/AdvisingAndSupport">contact us</a>. We also invite Pathway missionaries and students participating in the Speaking Partner Program to contact the <a href="https://pathway.lds.org/Main/AdvisingAndSupport">Pathway Support Center</a>.</p>
+   				<p>If you have questions or concerns about your involvement with the Speaking Partner Program please contact the <a target="_blank" href="https://pathway.lds.org/Main/AdvisingAndSupport">Pathway Support Center</a>.</p>
    			</div>
    			</div>
 
