--- a/pages/speaking_partners/discussion-materials.html
+++ b/pages/speaking_partners/discussion-materials.html
@@ -119,7 +119,7 @@
         </div>
         <br>
    				<div class="pf-section">
-   				<p>Have you been selected as a speaking partner mentor and are ready to begin serving? <a href="https://byuipublic.brainhoney.com/Frame/Component/CoursePlayer?enrollmentid=17089353">Click here</a> to find out what you’ll be discussing each week with your Pathway student. </p>
+   				<p>Have you been selected as a speaking partner mentor and are ready to begin serving? <a target="_blank" href="https://byuipublic.brainhoney.com/Frame/Component/CoursePlayer?enrollmentid=17089353">Click here</a> to find out what you’ll be discussing each week with your Pathway student. </p>
           <p>If you’ve not yet signed up to be a speaking partner volunteer, <a target="_blank" href="https://web.byui.edu/SpeakingPartners/Volunteer/">click here</a>.</p>
           <br>
           <div class="img-responsive"><img src="../../img/speaking-partners-main/website_speakingpartners_image12.png" /></div>
