--- a/pages/speaking_partners/signup.html
+++ b/pages/speaking_partners/signup.html
@@ -140,8 +140,8 @@
       	<p>Signing up is simple!</p>
       	<h5>Follow These Quick Steps:</h5>
       	<ol>
-      		<li><strong>Complete Registration Form:</strong><br><a href="https://web.byui.edu/SpeakingPartners/Volunteer/"><em>Click here</em></a> to complete a volunteer registration form.</li>
-      		<li><strong>Select Availability:</strong><br><a href="https://web.byui.edu/SpeakingPartners/Volunteer/"><em>Click here</em></a> to select the days/times you are available to volunteer.</li>
+      		<li><strong>Complete Registration Form:</strong><br><a href="http://www.byui.edu/pathway/speaking-partner-mentor-sign-up"><em>Click here</em></a> to complete a volunteer registration form.</li>
+      		<li><strong>Select Availability:</strong><br><a href="http://www.byui.edu/pathway/speaking-partner-mentor-sign-up"><em>Click here</em></a> to select the days/times you are available to volunteer.</li>
       	</ol>
       	</div>
 
