--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -154,7 +154,7 @@
         </ul>
       </div>
 
-        <a href="https://web.byui.edu/SpeakingPartners/Volunteer/" target="_blank"><img class="img-responsive img-space" src="../../img/speaking-partners-main/speakingpartner_signup.png" alt="Click here to sign up as a speaking partner" /></a>
+        <a href="http://www.byui.edu/pathway/speaking-partner-mentor-sign-up" target="_blank"><img class="img-responsive img-space" src="../../img/speaking-partners-main/speakingpartner_signup.png" alt="Click here to sign up as a speaking partner" /></a>
 
 <div id="video-info-block">
         <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
