--- a/index.htm
+++ b/index.htm
@@ -124,13 +124,7 @@
       <li data-target="#myCarousel" data-slide-to="6"> </li>
     </ol>
     <div class="carousel-inner">
-    <div class="item active">
-       <a class="full-width-banner teal" href="http://www.byui.edu/pathway/speaking-partner-promo">
-         <img class="visible-md visible-lg" src="img/homepage/MCspeakingPartners_2014_banner_pathway.lds.org.png" alt="Apply Now">
-         <img class="visible-sm visible-xs" src="img/homepage/MCspeakingPartners_2014_tablet_banner_pathway.lds.org.png" alt="Apply Now">
-       </a>
-    </div>
-     <div class="item">  <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/whatispathway.jpg" alt="What is Pathway"></a>
+     <div class="item active">  <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/whatispathway.jpg" alt="What is Pathway"></a>
         <div class="container">
           <div class="carousel-caption red">
             <h1><a href="pages/what_is_pathway/what_is_pathway.html">What is Pathway?</a></h1>
@@ -146,6 +140,12 @@
           </div>
         </div>
       </div>
+      <div class="item">
+       <a class="full-width-banner orange" href="http://www.byui.edu/pathway/speaking-partner-promo">
+         <img class="visible-md visible-lg" src="img/homepage/ACTFL_orange.png" alt="Test your english skills">
+         <img class="visible-sm visible-xs" src="img/homepage/ACTFL_orange_mobile.png" alt="Test your english skills">
+       </a>
+    </div>
       <div class="item"><a href="pages/what_is_pathway/l_version/HPW.html"><img src="img/homepage/meet-a-student.jpg" alt="English Language Learners"></a>
         <div class="container">
           <div class="carousel-caption turquoise">
