--- a/index.htm
+++ b/index.htm
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="item">
-       <a class="full-width-banner orange" href="http://www.byui.edu/pathway/speaking-partner-promo">
+       <a class="full-width-banner orange" target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3">
          <img class="visible-md visible-lg" src="img/homepage/ACTFL_orange.png" alt="Test your english skills">
          <img class="visible-sm visible-xs" src="img/homepage/ACTFL_orange_mobile.png" alt="Test your english skills">
        </a>
